--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ ratelimit = "^2.2.1"
 requests = "^2.32.3"
 tenacity = "^9.0.0"
 
+[tool.poetry.scripts]
+fli = "fli.cli:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
