--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flights"
-version = "0.1.0"
+version = "0.2.0"
 description = "A Python wrapper for Google Flights API"
 authors = ["Punit Arani <punit@joinslash.com>"]
 readme = "README.md"
@@ -15,11 +15,13 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.12"
 curl-cffi = "^0.7.4"
+google-genai = "^0.4.0"
 httpx = "^0.28.1"
-free-proxy = "^1.1.3"
+pandas = "^2.2.3"
 pydantic = "^2.10.4"
+python-dotenv = "^1.0.1"
 ratelimit = "^2.2.1"
-requests = "^2.32.3"
+streamlit = "^1.41.1"
 tenacity = "^9.0.0"
 typer = "^0.15.1"
 
