--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,35 +18,59 @@ jobs:
     strategy:
       matrix:
         python-version: [ "3.11", "3.12", "3.13" ]
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install poetry
+        run: pipx install poetry
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+          cache: 'poetry'
           cache-dependency-path: |
             poetry.lock
             pyproject.toml
 
-      - name: Install Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pypoetry
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
-
       - name: Install dependencies
-        run: |
-          poetry install --with dev
+        run: poetry install --with dev --no-interaction
 
       - name: Run tests
         run: |
-          poetry run pytest tests/ --all -v 
+          poetry run pytest tests/ --all -v \
+            --junitxml=junit.xml
+        env:
+          FORCE_COLOR: 1
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: Test Results (Python ${{ matrix.python-version }})
+          path: junit.xml
+
+  publish-test-results:
+    name: "Publish Test Results"
+    needs: test
+    runs-on: ubuntu-latest
+    if: always()
+    permissions:
+      checks: write
+      pull-requests: write
+    
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: "artifacts/**/junit.xml"
+          check_name: "Test Results"
+          comment_mode: always
+          compare_to_earlier_commit: true
