Add MCP server functionality and update project structure
- Introduced a new MCP server for natural language flight search capabilities.
- Added `CLAUDE.md` for guidance on using the MCP server with Claude.
- Updated `Makefile` and `README.md` to reflect new commands and installation instructions.
- Migrated from Poetry to `uv` for dependency management and command execution.
- Enhanced test suite with MCP server tests and updated existing tests for compatibility.
- Bumped project version to 0.5.0 and adjusted dependencies in `pyproject.toml`.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,30 +17,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.11", "3.12", "3.13" ]
+        python-version: [ "3.12", "3.13" ]
       fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install poetry
-        run: pipx install poetry
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          version: "latest"
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
-          cache-dependency-path: |
-            poetry.lock
-            pyproject.toml
+        run: uv python install ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: poetry install --with dev --no-interaction
+        run: uv sync --extra dev
 
       - name: Run tests
         run: |
-          poetry run pytest tests/ --all -v \
+          uv run pytest tests/ --all -v \
             --junitxml=junit.xml
         env:
           FORCE_COLOR: 1
