--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,19 +24,30 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - uses: actions/setup-python@v5
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: 3.x
+          version: "latest"
+
+      - name: Set up Python
+        run: uv python install 3.12
+
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material[imaging] mkdocstrings[python]
-      - run: pip install -e .
-      - run: mkdocs build
+
+      - name: Install dependencies
+        run: uv sync --extra dev
+
+      - name: Build docs
+        run: uv run mkdocs build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
