--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,20 +14,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: "3.12"
-          cache: 'pip'
-          cache-dependency-path: |
-            requirements*.txt
-            pyproject.toml
+          version: "latest"
 
-      - name: Install Ruff
-        run: pip install ruff
+      - name: Set up Python
+        run: uv python install 3.12
+
+      - name: Install dependencies
+        run: uv sync --extra dev
 
       - name: Check formatting
-        run: ruff format . --check
+        run: uv run ruff format . --check
 
       - name: Check style
-        run: ruff check . 
+        run: uv run ruff check .
