--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,15 @@ on:
   release:
     types: [ published ]
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to publish to'
+        required: true
+        default: 'testpypi'
+        type: choice
+        options:
+        - testpypi
+        - pypi
 
 permissions:
   contents: read
@@ -21,29 +30,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: "3.12"
-          cache: 'pip'
-          cache-dependency-path: |
-            poetry.lock
-            pyproject.toml
+          version: "latest"
 
-      - name: Install Poetry
+      - name: Set up Python
+        run: uv python install 3.12
+
+      - name: Install dependencies
+        run: uv sync --all-extras
+
+      - name: Run tests
+        run: uv run pytest -v
+
+      - name: Check code quality
         run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pypoetry
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
+          uv run ruff format --check .
+          uv run ruff check .
 
       - name: Build release distributions
-        run: |
-          poetry build
+        run: uv build
+
+      - name: Check package
+        run: uv run twine check dist/*
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
@@ -55,6 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - release-build
+    if: github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'pypi')
     permissions:
       id-token: write
 
