--- a/railway.toml
+++ b/railway.toml
@@ -5,6 +5,6 @@ nixpacksPlan = { "repo" = "punitarani/fli" }
 [deploy]
 numReplicas = 1
 startCommand = "uv run fli-mcp"
-sleepApplication = false
+sleepApplication = true
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
