Add support for Streamable HTTP MCP

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,6 +101,7 @@ nav:
   - Getting Started:
     - Quick Start: guides/quickstart.md
     - Examples: examples/advanced.md
+    - MCP Server: guides/mcp.md
   - API Reference:
     - Models: api/models.md
     - Search: api/search.md 
