--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ nixpacksPlan = { "repo" = "punitarani/fli" }
 
 [deploy]
 numReplicas = 1
-startCommand = "uv run fli-mcp"
+startCommand = "uv run fli-mcp-http"
 sleepApplication = true
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
